# rwh

./: .gitignore  README.md  README.org
aeson/: Person.hs
alignment/: README.org  code1.c  justfile
all_about_monads/: Continuation.hs  Error.hs  Identity.hs  Maybe.hs  Monad.hs  MonadPlus.hs  Monoid.hs  Reader.hs  ST.hs  State.hs  Writer.hs  example13.hs  mother.hs
chapter 10/: PNM.hs  Parse.hs
chapter 11/: TestTemplate.hs
chapter 12/: Barcode.hs
chapter 14/: Logger.hs  Random.hs  SimpleState.hs  State.hs  page352.hs
chapter 15/: HandleIO.hs  MonadHandle.hs  MonadHandleIO.hs  MovieReview.hs  RandomGolf.hs  RandomSupply.hs  Supply.hs  SupplyInstance.hs  VCard.hs  WriterIO.hs  foo.hs  wikibook.hs
chapter 16/: FormParse.hs  ParsecPlus.hs  csv1.hs  csv6.hs  csv7.hs  csv8.hs  csv9.hs
chapter 6/: soln.hs
chapter 8/: GlobRegex.hs  page205.hs  page210.hs
chapter 9/: RecursiveContents.hs
chapter1/: soln.hs
chapter18/: CountEntries.hs  UglyStack.hs
chapter2/: soln.hs
chapter3/: page60.hs  page69.hs
chapter4/: page84.hs  page97.hs
concurrency/: Ch7.md  logger.hs
conduit/: Ex2.hs  Example2.hs  List.hs  bracket.hs  connect.hs  fileIO.hs  lift.hs  terminate.hs  triple.hs
continuation/: #post#  Cont.hs  LCont.hs  post
devops/: Kubernetes.md  README.md
dhall/: config  dhall.hs
elm/: button.elm  main.html
free/: Free.hs
futures/: Cargo.toml
futures/src/: main.rs  reader.rs  reader_four.rs  reader_three.rs  reader_two.rs
gadt/: Expr.hs
hospitals/: Hospital.hs  Hospital2.hs  a.html  hospital3.hs  hospital4.hs  hospital5.hs  (+1 more)
io/: Pure.hs
(+206 files in other folders)
