[package]
name = "futures-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
pin-project = "1.0.10"
pin-utils = "0.1.0"
tokio = { version = "1.15.0", features = ["full"]}

[[bin]]
name = "reader"
path = "src/reader.rs"

[[bin]]
name = "reader2"
path = "src/reader_two.rs"

[[bin]]
name = "reader3"
path = "src/reader_three.rs"

[[bin]]
name = "reader4"
path = "src/reader_four.rs"
